Сделал главная/цитаты (Блок 5)

--- a/src/index.html
+++ b/src/index.html
@@ -283,6 +283,143 @@
           </a>
         </div>
       </section>
+
+      <!-- Блок 5: Цитата -->
+      <section class="home__quotes">
+        <div class="home__quotes__container">
+          <button class="home__quotes__button-prev">
+            <svg xmlns="http://www.w3.org/2000/svg" width="55" height="58" viewBox="0 0 55 58" fill="none">
+              <g opacity="0.9" filter="url(#filter0_d_297_41135)">
+                <path
+                  class="quotes__button__background"
+                  d="M44.4619 2.17989C43.0629 0.783965 41.1674 0 39.1911 0H9.67854C6.93101 0 4.7037 2.22731 4.7037 4.97484V37.7387C4.7037 39.7486 5.51447 41.6735 6.95248 43.0777L11.867 47.8767C13.261 49.238 15.1321 50 17.0805 50H46.0252C48.7727 50 51 47.7727 51 45.0252V11.7994C51 9.81751 50.2116 7.91698 48.8086 6.51707L44.4619 2.17989Z"
+                  fill="white"
+                  fill-opacity="1"
+                  shape-rendering="crispEdges"
+                />
+              </g>
+              <path
+                class="quotes__button__arrow"
+                d="M24.5383 22.6783C23.2999 23.9389 23.2999 26.0607 24.5384 27.3215L33.6388 36.5854L32.1341 38.1171L23.0337 28.8532C22.9421 28.7599 22.8433 28.6594 22.739 28.5532C20.8116 26.5911 20.8109 23.4094 22.7383 21.4473L32.1342 11.8826L33.6388 13.4142L24.5383 22.6783Z"
+                fill="#FD5D39"
+              />
+              <defs>
+                <filter
+                  id="filter0_d_297_41135"
+                  x="0.703735"
+                  y="0"
+                  width="54.2963"
+                  height="58"
+                  filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB"
+                >
+                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                  <feColorMatrix
+                    in="SourceAlpha"
+                    type="matrix"
+                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                    result="hardAlpha"
+                  />
+                  <feOffset dy="4" />
+                  <feGaussianBlur stdDeviation="2" />
+                  <feComposite in2="hardAlpha" operator="out" />
+                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_297_41135" />
+                  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_297_41135" result="shape" />
+                </filter>
+              </defs>
+            </svg>
+          </button>
+          <div class="home__quotes__content">
+            <div class="home__quote" data-quote-item>
+              <img src="img/home/block5-quote/man.png" alt="Иванов Иван Иванович" />
+              <p class="text-description--400">
+                «Профильная подготовка школьников позволяет гармонично соединить теоретические знания и практическое
+                применение, обеспечивая молодым людям уверенный старт в обучении в вузе и профессиональной карьере»,
+              </p>
+              <div class="home__quote__person">
+                <span class="text-base--700">Михаил Ефимов</span>
+                <p class="text-description--400">
+                  и. о. генерального директора филиала «Нижегородский» ООО «Эн+ Тепло Волга»
+                </p>
+              </div>
+            </div>
+            <div class="home__quote" data-quote-item>
+              <img src="img/home/block5-quote/man.png" alt="Иванов Иван Иванович" />
+              <p class="text-description--400">
+                «Профильная подготовка школьников позволяет гармонично соединить теоретические знания и практическое
+                применение, обеспечивая молодым людям уверенный старт в обучении в вузе и профессиональной карьере»,
+              </p>
+              <div class="home__quote__person">
+                <span class="text-base--700">Михаил Ефимов2</span>
+                <p class="text-description--400">
+                  и. о. генерального директора филиала «Нижегородский» ООО «Эн+ Тепло Волга»
+                </p>
+              </div>
+            </div>
+            <div class="home__quote" data-quote-item>
+              <img src="img/home/block5-quote/man.png" alt="Иванов Иван Иванович" />
+              <p class="text-description--400">
+                «Профильная подготовка школьников позволяет гармонично соединить теоретические знания и практическое
+                применение, обеспечивая молодым людям уверенный старт в обучении в вузе и профессиональной карьере»,
+              </p>
+              <div class="home__quote__person">
+                <span class="text-base--700">Михаил Ефимов3</span>
+                <p class="text-description--400">
+                  и. о. генерального директора филиала «Нижегородский» ООО «Эн+ Тепло Волга»
+                </p>
+              </div>
+            </div>
+          </div>
+          <button class="home__quotes__button-next">
+            <svg xmlns="http://www.w3.org/2000/svg" width="55" height="58" viewBox="0 0 55 58" fill="none">
+              <g opacity="0.9" filter="url(#filter0_d_428_14860)">
+                <path
+                  class="quotes__button__background"
+                  d="M11.2417 2.17989C12.6407 0.783965 14.5363 0 16.5125 0H46.0251C48.7726 0 50.9999 2.22731 50.9999 4.97484V37.7387C50.9999 39.7486 50.1891 41.6735 48.7511 43.0777L43.8366 47.8767C42.4426 49.238 40.5715 50 38.6231 50H9.67845C6.93092 50 4.70361 47.7727 4.70361 45.0252V11.7994C4.70361 9.81751 5.49205 7.91698 6.89502 6.51707L11.2417 2.17989Z"
+                  fill="white"
+                  fill-opacity="1"
+                  shape-rendering="crispEdges"
+                />
+              </g>
+              <path
+                class="quotes__button__arrow"
+                d="M31.1655 22.6781C32.4039 23.9388 32.4039 26.0606 31.1653 27.3213L22.0649 36.5853L23.5696 38.117L32.67 28.8531C32.7616 28.7598 32.8604 28.6593 32.9647 28.553C34.8921 26.591 34.8928 23.4092 32.9654 21.4472L23.5695 11.8824L22.0649 13.4141L31.1655 22.6781Z"
+                fill="#FD5D39"
+              />
+              <defs>
+                <filter
+                  id="filter0_d_428_14860"
+                  x="0.703613"
+                  y="0"
+                  width="54.2964"
+                  height="58"
+                  filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB"
+                >
+                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                  <feColorMatrix
+                    in="SourceAlpha"
+                    type="matrix"
+                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                    result="hardAlpha"
+                  />
+                  <feOffset dy="4" />
+                  <feGaussianBlur stdDeviation="2" />
+                  <feComposite in2="hardAlpha" operator="out" />
+                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_428_14860" />
+                  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_428_14860" result="shape" />
+                </filter>
+              </defs>
+            </svg>
+          </button>
+        </div>
+        <div class="home__quotes__footer">
+          <span class="text-base--400">Электроэнергетический класс</span>
+          <button class="btn-orange text-base--400">Узнать подробнее</button>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
