--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles/settings/common.css" />
     <link rel="stylesheet" href="styles/components/swipe.css" />
     <link rel="stylesheet" href="styles/pages/index.css" />
-    <script src="js/swipe.js"></script>
-    <script src="js/video-control.js"></script>
-    <script src="js/quotes-carousel.js"></script>
+    <script type="module" src="js/swipe.js"></script>
+    <script type="module" src="js/video-control.js"></script>
+    <script type="module" src="js/quotes-carousel.js"></script>
+    <script type="module" src="js/gallery.js"></script>
   </head>
   <body>
     <main>
@@ -418,6 +419,132 @@
         <div class="home__quotes__footer">
           <span class="text-base--400">Электроэнергетический класс</span>
           <button class="btn-orange text-base--400">Узнать подробнее</button>
+        </div>
+      </section>
+
+      <!-- Блок 6: Фотогалерея -->
+      <section class="home__gallery">
+        <div class="home__gallery__content">
+          <h2 class="home__gallery__title">Фотогалерея</h2>
+
+          <div class="home__gallery__main">
+            <div class="home__gallery__image-container">
+              <img
+                src="img/home/block6-gallery/gallery1.webp"
+                alt="Генерация тепла"
+                class="home__gallery__main-image"
+                data-gallery-main
+              />
+              <div class="home__gallery__navigation">
+                <button class="home__gallery__nav-btn" data-gallery-prev>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
+                    <path
+                      d="M3.68001 12.7567C2.27566 14.2463 2.27566 16.7535 3.68014 18.2433L14 29.19L12.2937 31L1.97383 20.0533C1.86995 19.9431 1.75796 19.8243 1.63963 19.6988C-0.546031 17.3803 -0.5468 13.6206 1.63886 11.3022L12.2938 0L14 1.80982L3.68001 12.7567Z"
+                      fill="#FD5D39"
+                    />
+                  </svg>
+                </button>
+                <button class="home__gallery__nav-btn" data-gallery-next>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
+                    <path
+                      d="M10.32 12.7567C11.7243 14.2463 11.7243 16.7535 10.3199 18.2433L1.71154e-06 29.19L1.70631 31L12.0262 20.0533C12.13 19.9431 12.242 19.8243 12.3604 19.6988C14.546 17.3803 14.5468 13.6206 12.3611 11.3022L1.70618 0L0 1.80982L10.32 12.7567Z"
+                      fill="#FD5D39"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+
+            <div class="home__gallery__info">
+              <div class="home__gallery__content-top">
+                <span class="home__gallery__subtitle text-base--400">Генерация тепла</span>
+                <div class="home__gallery__description">
+                  <p class="text-description--400">
+                    Сотрудник «Генерации тепла» за работой оборудования, чтобы дома и предприятия получали тепло без
+                    перебоев. Наш труд – это забота о комфорте и безопасности людей каждый день.
+                  </p>
+                  <p class="text-description--400">
+                    Благодаря таким специалистам энергия подаётся надёжно и с вниманием к окружающей среде.
+                  </p>
+                </div>
+              </div>
+
+              <div class="home__gallery__thumbnails">
+                <button
+                  class="home__gallery__thumbnail active"
+                  data-gallery-thumb="0"
+                  data-gallery-title="Генерация тепла"
+                  data-gallery-description="Сотрудник «Генерации тепла» за работой оборудования, чтобы дома и предприятия получали тепло без перебоев. Наш труд – это забота о комфорте и безопасности людей каждый день.|Благодаря таким специалистам энергия подаётся надёжно и с вниманием к окружающей среде."
+                >
+                  <img src="img/home/block6-gallery/gallery1.webp" alt="Генерация тепла" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="1"
+                  data-gallery-title="Энергетическая отрасль"
+                  data-gallery-description="Современные технологии в энергетике позволяют обеспечивать надежное энергоснабжение населения и промышленности.Инновационные решения помогают повышать эффективность и снижать воздействие на окружающую среду."
+                >
+                  <img src="img/home/block6-gallery/gallery2.webp" alt="Энергетика" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="2"
+                  data-gallery-title="Команда профессионалов"
+                  data-gallery-description="Наши специалисты работают в команде, обеспечивая бесперебойную работу энергетических систем. Профессионализм и опыт наших сотрудников - залог стабильной работы предприятия."
+                >
+                  <img src="img/home/block6-gallery/gallery3.webp" alt="Рабочие" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="3"
+                  data-gallery-title="Современное оборудование"
+                  data-gallery-description="Использование современного оборудования позволяет повышать эффективность производства энергии. Регулярное техническое обслуживание обеспечивает долговечность и надежность систем."
+                >
+                  <img src="img/home/block6-gallery/gallery4.webp" alt="Оборудование" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="4"
+                  data-gallery-title="Теплоэлектроцентраль"
+                  data-gallery-description="ТЭЦ обеспечивает комбинированную выработку тепловой и электрической энергии. Современные ТЭЦ отличаются высокой эффективностью и экологичностью."
+                >
+                  <img src="img/home/block6-gallery/gallery5.webp" alt="ТЭЦ" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="5"
+                  data-gallery-title="Эксперты отрасли"
+                  data-gallery-description="Наши специалисты обладают глубокими знаниями в области энергетики. Постоянное обучение и повышение квалификации - приоритет нашей компании."
+                >
+                  <img src="img/home/block6-gallery/gallery6.webp" alt="Специалисты" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="6"
+                  data-gallery-title="Профессиональный подход"
+                  data-gallery-description="Каждый сотрудник вносит свой вклад в общее дело обеспечения энергобезопасности. Ответственность и профессионализм - основные принципы нашей работы."
+                >
+                  <img src="img/home/block6-gallery/gallery7.webp" alt="Работник" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="7"
+                  data-gallery-title="Тепловые сети"
+                  data-gallery-description="Тепловые сети - это сложная инженерная система для транспортировки тепловой энергии. Современные материалы и технологии обеспечивают надежность теплоснабжения."
+                >
+                  <img src="img/home/block6-gallery/gallery8.webp" alt="Трубы" />
+                </button>
+                <button
+                  class="home__gallery__thumbnail"
+                  data-gallery-thumb="8"
+                  data-gallery-title="Энергетический комплекс"
+                  data-gallery-description="Наш энергетический комплекс включает в себя современные технологии производства энергии. Интегрированный подход позволяет оптимизировать процессы и повышать эффективность."
+                >
+                  <img src="img/home/block6-gallery/gallery9.webp" alt="Комплекс" />
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
