--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,12 @@
         </div>
       </div>
       <div class="header__sub-menu">
+        <div class="header__sub-menu__arrow"></div>
+        <div class="header__sub-menu__checkmark">
+          <svg xmlns="http://www.w3.org/2000/svg" width="53" height="23" viewBox="0 0 53 23" fill="none">
+            <path d="M1.1897 20.9883L26.1897 2.48828L51.1897 20.9883" stroke="white" stroke-width="4" />
+          </svg>
+        </div>
         <nav data-sub-menu="heating-networks">
           <ul>
             <li><a class="text-description--600" href="./pages/heating-networks/index.html">О компании</a></li>
@@ -134,6 +140,11 @@
               <a class="text-description--600" href="./pages/heating-networks/privacy-policy.html">Политика конфиденциальности</a>
             </li>
           </ul>
+          <div class="header__sub-menu__buttons">
+            <div class="header__sub-menu__buttons">
+              <a href="#textPris" class="btn-fiord text-description--600">Технологическое присоединение</a>
+            </div>
+          </div>
         </nav>
         <nav data-sub-menu="heat-generation">
           <ul>
@@ -197,6 +208,9 @@
               <a class="text-description--600" href="./pages/factory-networks/privacy-policy.html">Политика конфиденциальности</a>
             </li>
           </ul>
+          <div class="header__sub-menu__buttons">
+            <a href="#textPris" class="btn-fiord text-description--600">Технологическое присоединение</a>
+          </div>
         </nav>
         <nav data-sub-menu="ese-kuban">
           <ul>
@@ -295,7 +309,14 @@
           </nav>
           <nav class="header__modal-menu__detailed">
             <div class="header__modal-menu__detailed__item">
-              <h3>Теплосети</h3>
+              <div class="header__modal-menu__detailed__item__header">
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="11" viewBox="0 0 22 11" fill="none">
+                    <path d="M10.8253 10.5L-9.8941e-07 -1.31816e-07L21.6506 1.76094e-06L10.8253 10.5Z" fill="white" />
+                  </svg>
+                </button>
+                <h3>Теплосети</h3>
+              </div>
               <ul>
                 <li><a class="text-base--400" href="./pages/heating-networks/index.html">О компании</a></li>
                 <li><a class="text-base--400" href="./pages/heating-networks/information-disclosure.html">Раскрытие информации</a></li>
@@ -307,7 +328,14 @@
               </ul>
             </div>
             <div class="header__modal-menu__detailed__item">
-              <h3>Автозаводская ТЭЦ</h3>
+              <div class="header__modal-menu__detailed__item__header">
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="11" viewBox="0 0 22 11" fill="none">
+                    <path d="M10.8253 10.5L-9.8941e-07 -1.31816e-07L21.6506 1.76094e-06L10.8253 10.5Z" fill="white" />
+                  </svg>
+                </button>
+                <h3>Автозаводская ТЭЦ</h3>
+              </div>
               <ul>
                 <li><a class="text-base--400" href="./pages/avtozavodskaya-tpp/index.html">О компании</a></li>
                 <li><a class="text-base--400" href="./pages/avtozavodskaya-tpp/information-disclosure.html">Раскрытие информации</a></li>
@@ -319,7 +347,14 @@
               </ul>
             </div>
             <div class="header__modal-menu__detailed__item">
-              <h3>Генерация тепла</h3>
+              <div class="header__modal-menu__detailed__item__header">
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="11" viewBox="0 0 22 11" fill="none">
+                    <path d="M10.8253 10.5L-9.8941e-07 -1.31816e-07L21.6506 1.76094e-06L10.8253 10.5Z" fill="white" />
+                  </svg>
+                </button>
+                <h3>Генерация тепла</h3>
+              </div>
               <ul>
                 <li><a class="text-base--400" href="./pages/heat-generation/index.html">О компании</a></li>
                 <li><a class="text-base--400" href="./pages/heat-generation/information-disclosure.html">Раскрытие информации</a></li>
@@ -331,7 +366,14 @@
               </ul>
             </div>
             <div class="header__modal-menu__detailed__item">
-              <h3>Заводские сети</h3>
+              <div class="header__modal-menu__detailed__item__header">
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="11" viewBox="0 0 22 11" fill="none">
+                    <path d="M10.8253 10.5L-9.8941e-07 -1.31816e-07L21.6506 1.76094e-06L10.8253 10.5Z" fill="white" />
+                  </svg>
+                </button>
+                <h3>Заводские сети</h3>
+              </div>
               <ul>
                 <li><a class="text-base--400" href="./pages/factory-networks/index.html">О компании</a></li>
                 <li><a class="text-base--400" href="./pages/factory-networks/information-disclosure.html">Раскрытие информации</a></li>
@@ -341,7 +383,14 @@
               </ul>
             </div>
             <div class="header__modal-menu__detailed__item">
-              <h3>ЕСЭ-Кубань</h3>
+              <div class="header__modal-menu__detailed__item__header">
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="11" viewBox="0 0 22 11" fill="none">
+                    <path d="M10.8253 10.5L-9.8941e-07 -1.31816e-07L21.6506 1.76094e-06L10.8253 10.5Z" fill="white" />
+                  </svg>
+                </button>
+                <h3>ЕСЭ-Кубань</h3>
+              </div>
               <ul>
                 <li><a class="text-base--400" href="./pages/ese-kuban/index.html">О компании</a></li>
                 <li><a class="text-base--400" href="./pages/ese-kuban/information-disclosure.html">Раскрытие информации</a></li>
@@ -350,7 +399,14 @@
               </ul>
             </div>
             <div class="header__modal-menu__detailed__item">
-              <h3>ОП Ярославль</h3>
+              <div class="header__modal-menu__detailed__item__header">
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="11" viewBox="0 0 22 11" fill="none">
+                    <path d="M10.8253 10.5L-9.8941e-07 -1.31816e-07L21.6506 1.76094e-06L10.8253 10.5Z" fill="white" />
+                  </svg>
+                </button>
+                <h3>ОП Ярославль</h3>
+              </div>
               <ul>
                 <li><a class="text-base--400" href="./pages/op-yaroslavl/index.html">О компании</a></li>
                 <li><a class="text-base--400" href="./pages/op-yaroslavl/information-disclosure.html">Раскрытие информации</a></li>
